# deploy-hybrid-rag-genezio

./: .gitignore  LICENSE  Makefile  README.md  genezio.yaml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/src/: indexing.py  retrieval.py  schemas.py  search.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: rag-dashboard.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx  slider.tsx  tabs.tsx
